added new file changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Introduction-AI.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Introduction-AI.ipynb
@@ -220,6 +220,146 @@
     "              metrics=[\"accuracy\"])\n",
     "history = model.fit(X_train, y_train, epochs=30, validation_data=(X_valid, y_valid))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### If you are not satisfied with the performance of your model, you should go back and tune the hyperparameters. The first one to check is the learning rate. If that doesn’t help, try another optimizer (and always retune the learning rate after changing any hyperparameter). If the performance is still not great, then try tuning model hyperparameters such as the number of layers, the number of neurons per layer, and the types of activation functions to use for each hidden layer. You can also try tuning other hyperparameters, such as the batch size (it can be set in the fit() method using the batch_size argument, which defaults to 32). We will get back to hyperparameter tuning at the end of this chapter. Once you are satisfied with your model’s validation accuracy, you should evaluate it on the test set to estimate the generalization error before you deploy the model to production. You can easily do this using the evaluate() method (it also supports several other arguments, such as batch_size and sample_weight; please check the documentation for more details):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.5917 - root_mean_squared_error: 2.9312 - val_loss: 8.4109 - val_root_mean_squared_error: 2.9003\n",
+      "Epoch 2/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.3036 - root_mean_squared_error: 2.8816 - val_loss: 8.3917 - val_root_mean_squared_error: 2.8970\n",
+      "Epoch 3/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2865 - root_mean_squared_error: 2.8786 - val_loss: 8.4073 - val_root_mean_squared_error: 2.8997\n",
+      "Epoch 4/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2799 - root_mean_squared_error: 2.8775 - val_loss: 8.4712 - val_root_mean_squared_error: 2.9106\n",
+      "Epoch 5/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2742 - root_mean_squared_error: 2.8765 - val_loss: 8.3896 - val_root_mean_squared_error: 2.8967\n",
+      "Epoch 6/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2621 - root_mean_squared_error: 2.8744 - val_loss: 8.3685 - val_root_mean_squared_error: 2.8930\n",
+      "Epoch 7/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2642 - root_mean_squared_error: 2.8747 - val_loss: 8.3751 - val_root_mean_squared_error: 2.8942\n",
+      "Epoch 8/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2579 - root_mean_squared_error: 2.8737 - val_loss: 8.3669 - val_root_mean_squared_error: 2.8927\n",
+      "Epoch 9/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2537 - root_mean_squared_error: 2.8729 - val_loss: 8.3667 - val_root_mean_squared_error: 2.8927\n",
+      "Epoch 10/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2509 - root_mean_squared_error: 2.8725 - val_loss: 8.3739 - val_root_mean_squared_error: 2.8939\n",
+      "Epoch 11/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2518 - root_mean_squared_error: 2.8726 - val_loss: 8.3704 - val_root_mean_squared_error: 2.8934\n",
+      "Epoch 12/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2495 - root_mean_squared_error: 2.8722 - val_loss: 8.4009 - val_root_mean_squared_error: 2.8986\n",
+      "Epoch 13/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2492 - root_mean_squared_error: 2.8722 - val_loss: 8.4120 - val_root_mean_squared_error: 2.9005\n",
+      "Epoch 14/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2474 - root_mean_squared_error: 2.8719 - val_loss: 8.3659 - val_root_mean_squared_error: 2.8926\n",
+      "Epoch 15/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2477 - root_mean_squared_error: 2.8719 - val_loss: 8.3664 - val_root_mean_squared_error: 2.8927\n",
+      "Epoch 16/20\n",
+      "1719/1719 [==============================] - 2s 998us/step - loss: 8.2458 - root_mean_squared_error: 2.8716 - val_loss: 8.3674 - val_root_mean_squared_error: 2.8928\n",
+      "Epoch 17/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2448 - root_mean_squared_error: 2.8714 - val_loss: 8.3879 - val_root_mean_squared_error: 2.8963\n",
+      "Epoch 18/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2463 - root_mean_squared_error: 2.8716 - val_loss: 8.3659 - val_root_mean_squared_error: 2.8926\n",
+      "Epoch 19/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2452 - root_mean_squared_error: 2.8715 - val_loss: 8.3659 - val_root_mean_squared_error: 2.8926\n",
+      "Epoch 20/20\n",
+      "1719/1719 [==============================] - 2s 1ms/step - loss: 8.2463 - root_mean_squared_error: 2.8716 - val_loss: 8.3660 - val_root_mean_squared_error: 2.8926\n",
+      "313/313 [==============================] - 0s 496us/step - loss: 8.2478 - root_mean_squared_error: 2.8719\n",
+      "1/1 [==============================] - 0s 58ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(42)\n",
+    "norm_layer = tf.keras.layers.Normalization(input_shape=X_train.shape[1:])\n",
+    "model = tf.keras.Sequential([\n",
+    "    norm_layer,\n",
+    "    tf.keras.layers.Dense(50, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(50, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(50, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(1)\n",
+    "])\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=1e-3)\n",
+    "model.compile(loss=\"mse\", optimizer=optimizer, metrics=[\"RootMeanSquaredError\"])\n",
+    "norm_layer.adapt(X_train)\n",
+    "history = model.fit(X_train, y_train, epochs=20,\n",
+    "                    validation_data=(X_valid, y_valid))\n",
+    "mse_test, rmse_test = model.evaluate(X_test, y_test)\n",
+    "X_new = X_test[:3]\n",
+    "y_pred = model.predict(X_new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The Normalization layer learns the feature means and standard deviations in the training data when you call the adapt() method. Yet when you display the model’s summary, these statistics are listed as non-trainable. This is because these parameters are not affected by gradient descent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalization_layer = tf.keras.layers.Normalization()\n",
+    "hidden_layer1 = tf.keras.layers.Dense(30, activation=\"relu\")\n",
+    "hidden_layer2 = tf.keras.layers.Dense(30, activation=\"relu\")\n",
+    "concat_layer = tf.keras.layers.Concatenate()\n",
+    "output_layer = tf.keras.layers.Dense(1)\n",
+    "\n",
+    "input_ = tf.keras.layers.Input(shape=X_train.shape[1:])\n",
+    "normalized = normalization_layer(input_)\n",
+    "hidden1 = hidden_layer1(normalized)\n",
+    "hidden2 = hidden_layer2(hidden1)\n",
+    "concat = concat_layer([normalized, hidden2])\n",
+    "output = output_layer(concat)\n",
+    "\n",
+    "model = tf.keras.Model(inputs=[input_], outputs=[output])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Callbacks\n",
+    "\n",
+    "#### The fit() method accepts a callbacks argument that lets you specify a list of objects that Keras will call before and after training, before and after each epoch, and even before and after processing each batch. For example, the ModelCheckpoint callback saves checkpoints of your model at regular intervals during training, by default at the end of each epoch:\n",
+    "\n",
+    "#### Another way is to use the EarlyStopping callback. It will interrupt training when it measures no progress on the validation set for a number of epochs (defined by the patience argument), and if you set restore_best_weights=True it will roll back to the best model at the end of training. You can combine both callbacks to save checkpoints of your model in case your computer crashes, and interrupt training early when there is no more progress, to avoid wasting time and resources and to reduce overfitting:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint_cb = tf.keras.callbacks.ModelCheckpoint(\"my_checkpoints\",\n",
+    "                                                   save_weights_only=True)\n",
+    "history = model.fit([...], callbacks=[checkpoint_cb])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The number of epochs can be set to a large value since training will stop automatically when there is no more progress (just make sure the learning rate is not too small, or else it might keep making slow progress until the end). The EarlyStopping callback will store the weights of the best model in RAM, and it will restore them for you at the end of training.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
