added new file changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Introduction-AI.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Introduction-AI.ipynb
@@ -357,8 +357,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The number of epochs can be set to a large value since training will stop automatically when there is no more progress (just make sure the learning rate is not too small, or else it might keep making slow progress until the end). The EarlyStopping callback will store the weights of the best model in RAM, and it will restore them for you at the end of training.\n",
-    "\n"
+    "#### The number of epochs can be set to a large value since training will stop automatically when there is no more progress (just make sure the learning rate is not too small, or else it might keep making slow progress until the end). The EarlyStopping callback will store the weights of the best model in RAM, and it will restore them for you at the end of training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras_tuner as kt\n",
+    "\n",
+    "def build_model(hp):\n",
+    "    n_hidden = hp.Int(\"n_hidden\", min_value=0, max_value=8, default=2)\n",
+    "    n_neurons = hp.Int(\"n_neurons\", min_value=16, max_value=256)\n",
+    "    learning_rate = hp.Float(\"learning_rate\", min_value=1e-4, max_value=1e-2,\n",
+    "                             sampling=\"log\")\n",
+    "    optimizer = hp.Choice(\"optimizer\", values=[\"sgd\", \"adam\"])\n",
+    "    if optimizer == \"sgd\":\n",
+    "        optimizer = tf.keras.optimizers.SGD(learning_rate=learning_rate)\n",
+    "    else:\n",
+    "        optimizer = tf.keras.optimizers.Adam(learning_rate=learning_rate)\n",
+    "\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(tf.keras.layers.Flatten())\n",
+    "    for _ in range(n_hidden):\n",
+    "        model.add(tf.keras.layers.Dense(n_neurons, activation=\"relu\"))\n",
+    "    model.add(tf.keras.layers.Dense(10, activation=\"softmax\"))\n",
+    "    model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer,\n",
+    "                  metrics=[\"accuracy\"])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_search_tuner = kt.RandomSearch(\n",
+    "    build_model, objective=\"val_accuracy\", max_trials=5, overwrite=True,\n",
+    "    directory=\"my_fashion_mnist\", project_name=\"my_rnd_search\", seed=42)\n",
+    "random_search_tuner.search(X_train, y_train, epochs=10,\n",
+    "                           validation_data=(X_valid, y_valid))\n",
+    "\n",
+    "top3_models = random_search_tuner.get_best_models(num_models=3)\n",
+    "best_model = top3_models[0]\n",
+    "top3_params = random_search_tuner.get_best_hyperparameters(num_trials=3)\n",
+    "top3_params[0].values "
    ]
   }
  ],
