added new file changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Training-Deep-Neural-Networks.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Training-Deep-Neural-Networks.ipynb
@@ -8,11 +8,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Vanishing/Exploding Gradients Problems\n",
+    "\n",
+    "#### Unfortunately, gradients often get smaller and smaller as the algorithm progresses down to the lower layers. As a result, the gradient descent update leaves the lower layers’ connection weights virtually unchanged, and training never converges to a good solution. This is called the vanishing gradients problem. In some cases, the opposite can happen: the gradients can grow bigger and bigger until layers get insanely large weight updates and the algorithm diverges. This is the exploding gradients problem, which surfaces most often in recurrent neural networks (see Chapter 15). More generally, deep neural networks suffer from unstable gradients; different layers may learn at widely different speeds."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "dense = tf.keras.layers.Dense(50, activation=\"relu\",\n",
+    "                              kernel_initializer=\"he_normal\")\n",
+    "\n",
+    "he_avg_init = tf.keras.initializers.VarianceScaling(scale=2., mode=\"fan_avg\",\n",
+    "                                                    distribution=\"uniform\")\n",
+    "dense = tf.keras.layers.Dense(50, activation=\"sigmoid\",\n",
+    "                              kernel_initializer=he_avg_init)"
+   ]
   }
  ],
  "metadata": {
