added new file changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Training-Deep-Neural-Networks.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Training-Deep-Neural-Networks.ipynb
@@ -84,7 +84,9 @@
    "source": [
     "## Gradient Clipping\n",
     "\n",
-    "#### Another technique to mitigate the exploding gradients problem is to clip the gradients during backpropagation so that they never exceed some threshold. This is called gradient clipping.⁠14 This technique is generally used in recurrent neural networks, where using batch normalization is tricky (as you will see in Chapter 15)."
+    "#### Another technique to mitigate the exploding gradients problem is to clip the gradients during backpropagation so that they never exceed some threshold. This is called gradient clipping.⁠14 This technique is generally used in recurrent neural networks, where using batch normalization is tricky (as you will see in Chapter 15).\n",
+    "\n",
+    "#### If you observe that the gradients explode during training (you can track the size of the gradients using TensorBoard), you may want to try clipping by value or clipping by norm, with different thresholds, and see which option performs best on the validation set."
    ]
   }
  ],
