added new file changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Training-Deep-Neural-Networks.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Training-Deep-Neural-Networks.ipynb
@@ -193,6 +193,36 @@
     "    tf.keras.layers.Dense(10, activation=\"softmax\")\n",
     "])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## WARNING\n",
+    "\n",
+    "#### Since dropout is only active during training, comparing the training loss and the validation loss can be misleading. In particular, a model may be overfitting the training set and yet have similar training and validation losses. So, make sure to evaluate the training loss without dropout (e.g., after training).\n",
+    "\n",
+    "#### If you observe that the model is overfitting, you can increase the dropout rate. Conversely, you should try decreasing the dropout rate if the model underfits the training set. It can also help to increase the dropout rate for large layers, and reduce it for small ones. Moreover, many state-of-the-art architectures only use dropout after the last hidden layer, so you may want to try this if full dropout is too strong.\n",
+    "\n",
+    "#### Dropout does tend to significantly slow down convergence, but it often results in a better model when tuned properly. So, it is generally well worth the extra time and effort, especially for large models.\n",
+    "\n",
+    "#### Second, the authors introduced a powerful technique called MC dropout, which can boost the performance of any trained dropout model without having to retrain it or even modify it at all. It also provides a much better measure of the model’s uncertainty, and it can be implemented in just a few lines of code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "y_probas = np.stack([model(X_test, training=True)\n",
+    "                     for sample in range(100)])\n",
+    "y_proba = y_probas.mean(axis=0)\n",
+    "model.predict(X_test[:1]).round(3)\n",
+    "y_proba[0].round(3)"
+   ]
   }
  ],
  "metadata": {
