added new file changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Training-Deep-Neural-Networks.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Training-Deep-Neural-Networks.ipynb
@@ -223,6 +223,32 @@
     "model.predict(X_test[:1]).round(3)\n",
     "y_proba[0].round(3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Max-Norm Regularization\n",
+    "\n",
+    "#### Another popular regularization technique for neural networks is called max-norm regularization: for each neuron, it constrains the weights w of the incoming connections such that ∥ w ∥2 ≤ r, where r is the max-norm hyperparameter and ∥ · ∥2 is the ℓ2 norm.\n",
+    "\n",
+    "#### Max-norm regularization does not add a regularization loss term to the overall loss function. Instead, it is typically implemented by computing ∥ w ∥2 after each training step and rescaling w if needed (w ← w r / ∥ w ∥2).\n",
+    "\n",
+    "#### Reducing r increases the amount of regularization and helps reduce overfitting. Max-norm regularization can also help alleviate the unstable gradients problems (if you are not using batch normalization).\n",
+    "\n",
+    "#### To implement max-norm regularization in Keras, set the kernel_constraint argument of each hidden layer to a max_norm() constraint with the appropriate max value, like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dense = tf.keras.layers.Dense(\n",
+    "    100, activation=\"relu\", kernel_initializer=\"he_normal\",\n",
+    "    kernel_constraint=tf.keras.constraints.max_norm(1.))"
+   ]
   }
  ],
  "metadata": {
