--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Custom-Models.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Custom-Models.ipynb
@@ -59,6 +59,29 @@
    "source": [
     "#### If you decorate the huber_fn() function with @keras.utils.​reg⁠ister_keras_serializable(), it will automatically be available to the load_model() function: there’s no need to include it in the custom_objects dictionary."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_huber(threshold=1.0):\n",
+    "    def huber_fn(y_true, y_pred):\n",
+    "        error = y_true - y_pred\n",
+    "        is_small_error = tf.abs(error) < threshold\n",
+    "        squared_loss = tf.square(error) / 2\n",
+    "        linear_loss  = threshold * tf.abs(error) - threshold ** 2 / 2\n",
+    "        return tf.where(is_small_error, squared_loss, linear_loss)\n",
+    "    return huber_fn\n",
+    "\n",
+    "model.compile(loss=create_huber(2.0), optimizer=\"nadam\")\n",
+    "\n",
+    "model = tf.keras.models.load_model(\n",
+    "    \"my_model_with_a_custom_loss_threshold_2\",\n",
+    "    custom_objects={\"huber_fn\": create_huber(2.0)}\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
