added new changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Loading-Preprocessing-Tensorflow.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Loading-Preprocessing-Tensorflow.ipynb
@@ -55,11 +55,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The CategoryEncoding Layer\n",
+    "\n",
+    "#### When there are only a few categories (e.g., less than a dozen or two), then one-hot encoding is often a good option (as discussed in Chapter 2). To do this, Keras provides the CategoryEncoding layer. For example, let’s one-hot encode the age_​cate⁠gories feature we just created:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "onehot_layer = tf.keras.layers.CategoryEncoding(num_tokens=3)\n",
+    "onehot_layer(age_categories)"
+   ]
   }
  ],
  "metadata": {
