--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/CNN.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/CNN.ipynb
@@ -18,10 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.datasets import load_sample_images\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "images = load_sample_images()[\"images\"]\n",
+    "images = tf.keras.layers.CenterCrop(height=70, width=120)(images)\n",
+    "images = tf.keras.layers.Rescaling(scale=1 / 255)(images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv_layer = tf.keras.layers.Conv2D(filters=32, kernel_size=7)\n",
+    "fmaps = conv_layer(images)"
+   ]
   }
  ],
  "metadata": {
@@ -31,7 +48,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
