--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/RNNS-CNNS.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/RNNS-CNNS.ipynb
@@ -29,7 +29,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from statsmodels.tsa.arima.model import ARIMA\n",
+    "\n",
+    "origin, today = \"2019-01-01\", \"2019-05-31\"\n",
+    "rail_series = df.loc[origin:today][\"rail\"].asfreq(\"D\")\n",
+    "model = ARIMA(rail_series,\n",
+    "              order=(1, 0, 0),\n",
+    "              seasonal_order=(0, 1, 1, 7))\n",
+    "model = model.fit()\n",
+    "y_pred = model.forecast()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origin, start_date, end_date = \"2019-01-01\", \"2019-03-01\", \"2019-05-31\"\n",
+    "time_period = pd.date_range(start_date, end_date)\n",
+    "rail_series = df.loc[origin:end_date][\"rail\"].asfreq(\"D\")\n",
+    "y_preds = []\n",
+    "for today in time_period.shift(-1):\n",
+    "    model = ARIMA(rail_series[origin:today],  # train on data up to \"today\"\n",
+    "                  order=(1, 0, 0),\n",
+    "                  seasonal_order=(0, 1, 1, 7))\n",
+    "    model = model.fit()  # note that we retrain the model every day!\n",
+    "    y_pred = model.forecast()[0]\n",
+    "    y_preds.append(y_pred)\n",
+    "\n",
+    "y_preds = pd.Series(y_preds, index=time_period)\n",
+    "mae = (y_preds - rail_series[time_period]).abs().mean()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### At this point, you may be wondering how to pick good hyperparameters for the SARIMA model. There are several methods, but the simplest to understand and to get started with is the brute-force approach: just run a grid search. For each model you want to evaluate (i.e., each hyperparameter combination), you can run the preceding code example, changing only the hyperparameter values. Good p, q, P, and Q values are usually fairly small (typically 0 to 2, sometimes up to 5 or 6), and d and D are typically 0 or 1, sometimes 2. As for s, it’s just the main seasonal pattern’s period: in our case it’s 7 since there’s a strong weekly seasonality. The model with the lowest MAE wins. Of course, you can replace the MAE with another metric if it better matches your business objective. And that’s it!4\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
