added new changes

--- a/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
+++ b/AWS-Books/ML-Sagemaker-Cook-Book/Getting-Started.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How it works…\n",
+    "\n",
+    "#### The SageMaker Python SDK helps data scientists and ML practitioners work on ML experiments using a Python library that abstracts the lower-level API operations, which distinguishes it from the Boto3 AWS SDK for Python. The SageMaker Python SDK makes use of abstraction layers and concepts such as models, estimators, and predictors, with fit() and deploy() functions similar to what libraries and frameworks such as Keras and scikit-learn have."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
